--- a/app/src/main/res/layout/pulsating_button.xml
+++ b/app/src/main/res/layout/pulsating_button.xml
@@ -2,9 +2,8 @@
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/button"
-    android:layout_width="100dp"
-    android:layout_height="60dp"
-    android:text="Press Me"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:text="Press Me" />
 
 
